# constructos-dev

./: .env.client.example  .env.jira-mcp.example  .gitignore  .mcp.json  AGENTS.md  README.md  VERSION  auth.json  codex.auth.placeholder.json  codex.config.toml  codex.task-app.toml  conftest.py  docker-compose.client.yml  docker-compose.jira-mcp.yml  docker-compose.license-control-plane.yml  docker-compose.macos-m4.yml  docker-compose.owner.local-docs.yml  docker-compose.owner.ubuntu-gpu.yml  docker-compose.yml  pyproject.toml
app/: .dockerignore  Dockerfile  main.py  requirements.txt
desktop/: README.md  main.cjs  package-lock.json  package.json  preload.cjs
docs/: 01-business-overview.md  02-technical-architecture.md  03-domain-model-and-workflows.md  04-api-and-mcp-map.md  05-operations-runbook.md  06-graph-context-pack-graphrag-plan.md  07-graph-rag-rollout-eval.md  08-cqrs-consistency-guardrails.md  09-project-template-chat-creation-analysis.md  10-notes-tasks-grouping-plan.md  11-operation-gateway-rollout.md  12-macos-m4-licensing-and-distribution-plan.md  13-bug-reporting-to-control-plane-plan.md  14-skills-integration-analysis-and-plan.md  15-linkedin-announcement-posts.md  16-chat-history-cqrs-knowledge-indexing-plan.md  17-notifications-modernization-plan.md  18-codex-session-resume-token-efficiency-plan.md  19-electron-desktop-packaging.md  19-event-storming-projection-implementation-plan.md  20-team-mode-skill-implementation-plan.md  21-team-mode-and-ui-update-summary.md  22-cqrs-write-read-endpoint-mcp-audit.md  classification-caching-improvements-plan.md  (+33 more)
tools/cos/: README.md  cos  pyproject.toml
tools/cos/scripts/: build.sh  install.sh  uninstall.sh
tools/cos/src/cos_cli/: __init__.py  codex_runner.py  config.py  doctor.py  main.py  parser.py  prompting.py
tools/cos/tests/: test_main.py
(+469 files in other folders)
