[project]
name = "task-management"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "eventsourcing==9.5.3",
    "eventsourcing-kurrentdb==1.2.2",
    "fastapi==0.128.5",
    "httpx==0.28.1",
    "kurrentdbclient==1.2.1",
    "neo4j==5.28.2",
    "pypdf==5.2.0",
    "psycopg[binary]==3.2.12",
    "pydantic==2.12.5",
    "pytest==9.0.2",
    "python-multipart==0.0.22",
    "sqlalchemy==2.0.46",
    "uvicorn==0.38.0",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
addopts = "--import-mode=importlib"
