[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "constructos-cos"
version = "0.1.0"
description = "COS thin wrapper around Codex with automatic application MCP injection."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "m4tr1x" }
]
dependencies = [
  "typer>=0.12.0,<1.0.0",
  "tomli>=2.0.1; python_version < '3.11'",
]
keywords = ["codex", "cli", "mcp", "automation"]
classifiers = [
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/nirm3l/constructos"
Repository = "https://github.com/nirm3l/constructos"
Issues = "https://github.com/nirm3l/constructos/issues"

[project.scripts]
cos = "cos_cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cos_cli"]

[tool.hatch.build.targets.sdist]
include = [
  "README.md",
  "pyproject.toml",
  "src/cos_cli",
]
